# basalt

./: CONTRIBUTING.md  Cargo.toml  README.md  basalt_demo.tape  config.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
basalt/: CHANGELOG.md  Cargo.toml  config.toml
basalt-core/: CHANGELOG.md  Cargo.toml  README.md
basalt-core/src/: lib.rs  markdown.rs  obsidian.rs
basalt-core/src/obsidian/: config.rs  note.rs  vault.rs  vault_entry.rs
basalt-widgets/: CHANGELOG.md  Cargo.toml  README.md
basalt-widgets/src/: component.rs  lib.rs  markdown.rs
basalt-widgets/src/markdown/: state.rs  view.rs
basalt/src/: app.rs  config.rs  explorer.rs  help.txt  help_modal.rs  lib.rs  main.rs  markdown.rs  note_editor.rs  outline.rs  sidepanel.rs  splash.rs  start.rs  statusbar.rs  stylized_text.rs  text_counts.rs  vault_selector.rs  vault_selector_modal.rs
basalt/src/config/: key_binding.rs
basalt/src/explorer/: item.rs  state.rs
basalt/src/markdown/: parser.rs  state.rs  view.rs
basalt/src/markdown/snapshots/: basalt_tui__markdown__view__tests__render_markdown_view-2.snap  basalt_tui__markdown__view__tests__render_markdown_view-3.snap  basalt_tui__markdown__view__tests__render_markdown_view-4.snap  basalt_tui__markdown__view__tests__render_markdown_view-5.snap  basalt_tui__markdown__view__tests__render_markdown_view-6.snap  basalt_tui__markdown__view__tests__render_markdown_view-7.snap  basalt_tui__markdown__view__tests__render_markdown_view-8.snap  basalt_tui__markdown__view__tests__render_markdown_view-9.snap  basalt_tui__markdown__view__tests__render_markdown_view.snap
basalt/src/note_editor/: editor.rs  markdown_parser.rs  state.rs  text_buffer.rs  view.rs
basalt/src/note_editor/snapshots/: basalt_tui__note_editor__editor__tests__edit_mode_with_arbitrary_cursor_move.snap  basalt_tui__note_editor__editor__tests__edit_mode_with_content.snap  basalt_tui__note_editor__editor__tests__edit_mode_with_content_and_simple_change.snap  basalt_tui__note_editor__editor__tests__edit_mode_with_content_with_complete_word_input_change.snap  basalt_tui__note_editor__editor__tests__empty_default_state.snap  basalt_tui__note_editor__editor__tests__rendered_markdown_view-2.snap  basalt_tui__note_editor__editor__tests__rendered_markdown_view-3.snap  basalt_tui__note_editor__editor__tests__rendered_markdown_view-4.snap  basalt_tui__note_editor__editor__tests__rendered_markdown_view-5.snap  basalt_tui__note_editor__editor__tests__rendered_markdown_view-6.snap  basalt_tui__note_editor__editor__tests__rendered_markdown_view-7.snap  basalt_tui__note_editor__editor__tests__rendered_markdown_view-8.snap  basalt_tui__note_editor__editor__tests__rendered_markdown_view-9.snap  basalt_tui__note_editor__editor__tests__rendered_markdown_view.snap
basalt/src/outline/: item.rs  state.rs
basalt/src/snapshots/: basalt_tui__config__tests__base_config_snapshot.snap  basalt_tui__explorer__tests__render_entries-2.snap  basalt_tui__explorer__tests__render_entries-3.snap  basalt_tui__explorer__tests__render_entries-4.snap  basalt_tui__explorer__tests__render_entries.snap  basalt_tui__explorer__tests__render_markdown_view-2.snap  basalt_tui__explorer__tests__render_markdown_view.snap  basalt_tui__outline__tests__atx_style_with_closing_hashes.snap  basalt_tui__outline__tests__boundary_conditions_systematic.snap  basalt_tui__outline__tests__complex_nested_structure.snap  basalt_tui__outline__tests__duplicate_headings.snap  basalt_tui__outline__tests__empty.snap  basalt_tui__outline__tests__irregular_nesting_with_skips.snap  basalt_tui__outline__tests__level_skipping.snap  basalt_tui__outline__tests__mixed_with_content.snap  basalt_tui__outline__tests__multiple_root_levels.snap  basalt_tui__outline__tests__numbered_headings.snap  basalt_tui__outline__tests__only_deep_level.snap  basalt_tui__outline__tests__only_top_level.snap  basalt_tui__outline__tests__render_entries-2.snap  basalt_tui__outline__tests__render_entries.snap  basalt_tui__outline__tests__reverse_hierarchy.snap  basalt_tui__outline__tests__sequential_all_levels.snap  basalt_tui__outline__tests__single_level.snap  basalt_tui__outline__tests__special_characters_and_formatting.snap  basalt_tui__outline__tests__stress_test_many_headings.snap  basalt_tui__outline__tests__whitespace_variations.snap
docs/: Basalt.md  Configuration.md  (+4 more)
(+4 files in other folders)
