[workspace]
members = ["basalt", "basalt-core", "basalt-widgets"]
resolver = "2"

[workspace.dependencies]
basalt = { path = "basalt" }
basalt-core = { path = "basalt-core", version = "0.5.0" }
basalt-widgets = { path = "basalt-widgets", version = "0.1.1" }

[profile.ci]
inherits = "dev"
opt-level = 0
