[package]
name = "basalt-core"
description = """
Provides the core functionality for Basalt TUI application
"""
readme = "README.md"
repository = "https://github.com/erikjuhani/basalt"
license = "MIT"
version = "0.4.1"
edition = "2021"

[dependencies]
dirs = "5.0.1"
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.12.2"

[dev-dependencies]
indoc = "2"
