[package]
name = "basalt-tui"
description = """
Basalt TUI application for Obsidian notes.
"""
readme = "../README.md"
repository = "https://github.com/erikjuhani/basalt"
license = "MIT"
version = "0.3.1"
edition = "2021"

[dependencies]
basalt-core = { workspace = true }
basalt-widgets = { workspace = true }
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
crossterm = "0.28.1"

[dev-dependencies]
indoc = "2"

[[bin]]
name = "basalt"
path = "src/main.rs"

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3
