[package]
name = "basalt-tui"
description = """
Basalt TUI application for Obsidian notes.
"""
readme = "../README.md"
repository = "https://github.com/erikjuhani/basalt"
license = "MIT"
version = "0.5.0"
edition = "2021"

[dependencies]
basalt-core = { workspace = true }
basalt-widgets = { workspace = true }
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
crossterm = "0.28.1"
pulldown-cmark = "0.13.0"
textwrap = "0.16.2"

[dev-dependencies]
indoc = "2"
insta = "1.43.1"

[[bin]]
name = "basalt"
path = "src/main.rs"

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3
